In de-vs mode the new --require-compliance option does not have an effect when doing sign+encrypt with an non-compliant key. Test can easily be done by encrypting to an cv25519.
Description
Description
Details
Details
- Version
- <= 2.2.37
Revisions and Commits
Revisions and Commits
| rG GnuPG | |||
| rG46f9b0071f54 gpg: Fix assertion failure due to errors in encrypt_filter. | |||
| rGa51067a21f68 gpg: Make --require-compliance work for -se | |||
| rGaa0c942521d8 gpg: Fix assertion failure due to errors in encrypt_filter. | |||
| rGf88cb12f8e3c gpg: Make --require-compliance work for -se | |||
Related Objects
Related Objects
- Mentioned In
- T6159: Release GnuPG 2.2.38